--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de.swsnr.pictureoftheday\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-05-12 01:53+0000\n"
+"PO-Revision-Date: 2025-05-13 19:53+0000\n"
 "Last-Translator: tiagoFlach <tiagoflach@noreply.codeberg.org>\n"
 "Language-Team: Portuguese (Brazil) <https://translate.codeberg.org/projects/"
 "de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/pt_BR/>\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
-"X-Generator: Weblate 5.10.2\n"
+"X-Generator: Weblate 5.11.4\n"
 
 #. Translators: Do feel free to translate the application name
 #: de.swsnr.pictureoftheday.desktop.in:3
@@ -148,12 +148,16 @@ msgstr ""
 msgid ""
 "Add overlay toolbar to go to the previous or next image to the image view."
 msgstr ""
+"Adicione uma barra de ferramentas de sobreposição para ir para a imagem "
+"anterior ou seguinte na visualização de imagem."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:75
 msgid ""
 "Add toolbar buttons to save the current image, and to open the current image "
 "in an external application."
 msgstr ""
+"Adicione botões na barra de ferramentas para salvar a imagem atual e para "
+"abri-la em um aplicativo externo."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:76
 msgid ""
@@ -163,23 +167,24 @@ msgstr ""
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:88
 msgid "Use a more reliable endpoint for Wikimedia images."
-msgstr ""
+msgstr "Use um ponto final mais confiável para imagens da Wikimedia."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:89
 msgid "No longer show preview when setting a wallpaper."
 msgstr ""
+"Não é mais possível mostrar a pré-visualização ao definir um papel de parede."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:90
 msgid "Improve scheduling of automatic downloads."
-msgstr ""
+msgstr "Melhore o agendamento de downloads automáticos."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:91
 msgid "Remember window size and state."
-msgstr ""
+msgstr "Lembre-se do tamanho e estado da janela."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:92
 msgid "Update to GNOME 48."
-msgstr ""
+msgstr "Atualizado para o GNOME 48."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:102
 msgid ""
@@ -191,7 +196,7 @@ msgstr ""
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:103
 msgid "No longer support multiple windows."
-msgstr ""
+msgstr "Não oferece mais suporte a múltiplas janelas."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:113
 msgid ""
@@ -206,23 +211,26 @@ msgid ""
 "Add a main window to show today's picture of the day and a button to set it "
 "as current wallpaper."
 msgstr ""
+"Adicione uma janela principal para mostrar a foto do dia e um botão para "
+"defini-la como papel de parede atual."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:126
 msgid "A picture of the day from Wikimedia"
-msgstr ""
+msgstr "Uma foto do dia da Wikimedia"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:130
 msgid "The preferences dialog with settings for image sources"
 msgstr ""
+"A caixa de diálogo de preferências com configurações para fontes de imagem"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:134
 msgid "The empty greeting page with the application icon"
-msgstr ""
+msgstr "A página de boas-vindas vazia com o ícone do aplicativo"
 
 #: resources/gtk/help-overlay.blp:14
 msgctxt "shortcuts group title"
 msgid "General"
-msgstr ""
+msgstr "Geral"
 
 #: resources/gtk/help-overlay.blp:17
 msgctxt "shortcut description"
@@ -242,7 +250,7 @@ msgstr "Sair do aplicativo"
 #: resources/gtk/help-overlay.blp:33
 msgctxt "shortcuts group title"
 msgid "Picture Of The Day Window"
-msgstr ""
+msgstr "Janela da Imagem do Dia"
 
 #: resources/gtk/help-overlay.blp:36
 msgctxt "shortcut description"
@@ -282,7 +290,7 @@ msgstr "Próxima imagem"
 #: resources/ui/application-window.blp:30
 msgctxt "main-window.toolbar.button.tooltip"
 msgid "Set daily wallpaper automatically"
-msgstr ""
+msgstr "Definir papel de parede diário automaticamente"
 
 #: resources/ui/application-window.blp:41
 msgctxt "main-window.toolbar.button.label"
@@ -292,7 +300,7 @@ msgstr "Fonte"
 #: resources/ui/application-window.blp:68
 msgctxt "main-window.toolbar.button.tooltip"
 msgid "Load images for selected source"
-msgstr ""
+msgstr "Carregar imagens para a fonte selecionada"
 
 #: resources/ui/application-window.blp:74
 msgctxt "main-window.toolbar.button.tooltip"
@@ -302,12 +310,12 @@ msgstr "Cancelar o carregamento das imagens"
 #: resources/ui/application-window.blp:90
 msgctxt "main-window.toolbar.button.tooltip"
 msgid "Set current image as wallpaper"
-msgstr ""
+msgstr "Definir imagem atual como papel de parede"
 
 #: resources/ui/application-window.blp:102
 msgctxt "main-window.toolbar.button.tooltip"
 msgid "Open image with external application"
-msgstr ""
+msgstr "Abrir imagem com aplicativo externo"
 
 #: resources/ui/application-window.blp:108
 msgctxt "main-window.toolbar.button.tooltip"
@@ -317,7 +325,7 @@ msgstr "Salvar imagem"
 #: resources/ui/application-window.blp:119
 msgctxt "main-window.toolbar.button.tooltip"
 msgid "Toggle the sidebar with image information"
-msgstr ""
+msgstr "Alternar a barra lateral com informações da imagem"
 
 #: resources/ui/application-window.blp:174
 msgctxt "images-view.metadata.label"
@@ -326,7 +334,7 @@ msgstr "Título"
 
 #: resources/ui/application-window.blp:183
 msgid "Visit the source page of this image."
-msgstr ""
+msgstr "Visite a página de origem desta imagem."
 
 #: resources/ui/application-window.blp:192
 msgctxt "images-view.metadata.label"
@@ -345,7 +353,7 @@ msgstr "Source"
 
 #: resources/ui/application-window.blp:224
 msgid "Visit the main page of the source of this image."
-msgstr ""
+msgstr "Visite a página principal da fonte desta imagem."
 
 #: resources/ui/application-window.blp:243
 msgctxt "start-page.button.label"
@@ -370,7 +378,7 @@ msgstr "_Atalhos de teclado"
 #: resources/ui/application-window.blp:278
 msgctxt "main-window.menu.label"
 msgid "_About Picture Of The Day"
-msgstr ""
+msgstr "_Sobre o Foto do Dia"
 
 #: resources/ui/error-notification-page.blp:20
 msgid "Open preferences"
@@ -403,11 +411,11 @@ msgstr "Coleções habilitadas"
 
 #: schemas/de.swsnr.pictureoftheday.gschema.xml:5
 msgid "The identifier the selected source."
-msgstr ""
+msgstr "O identificador da fonte selecionada."
 
 #: schemas/de.swsnr.pictureoftheday.gschema.xml:9
 msgid "Whether to set the wallpaper automatically."
-msgstr ""
+msgstr "Se o papel de parede deve ser definido automaticamente."
 
 #: schemas/de.swsnr.pictureoftheday.gschema.xml:14
 msgid ""
@@ -415,10 +423,14 @@ msgid ""
 "fine, but if you find that you are rate-limited, you may wish to use your "
 "own API key, which you can obtain free of charge at https://api.nasa.gov/."
 msgstr ""
+"A chave de API a ser usada para solicitações à API do APOD. A chave padrão "
+"geralmente funciona, mas se você perceber que tem limitações de taxa, pode "
+"usar sua própria chave de API, que pode ser obtida gratuitamente em https://"
+"api.nasa.gov/."
 
 #: schemas/de.swsnr.pictureoftheday.gschema.xml:24
 msgid "Collections from Stålenhag which to ignore."
-msgstr ""
+msgstr "Coleções de Stålenhag que devem ser ignoradas."
 
 #: src/app.rs:123
 msgctxt "about-dialog.link.label"
@@ -445,12 +457,12 @@ msgstr "Serviços úteis"
 #: src/app.rs:179
 msgctxt "notification.title"
 msgid "Picture Of The Day updated"
-msgstr ""
+msgstr "Foto do Dia atualizado"
 
 #: src/app.rs:184
 msgctxt "notification.body"
 msgid "Please restart the app to use the new version."
-msgstr ""
+msgstr "Reinicie o aplicativo para usar a nova versão."
 
 #: src/app.rs:196
 msgctxt "alert-dialog.title"
@@ -465,6 +477,10 @@ msgid ""
 "Automatic restarting is not yet supported, but you can quit the app and "
 "start it again manually."
 msgstr ""
+"O Imagem do Dia foi atualizado e precisa ser reiniciada.\n"
+"\n"
+"A reinicialização automática ainda não é suportada, mas você pode sair do "
+"aplicativo e reiniciá-lo manualmente."
 
 #: src/app.rs:210
 msgctxt "alert-dialog.response"
@@ -499,7 +515,7 @@ msgstr "Abrir preferências"
 #: src/app.rs:589
 msgctxt "command-line.option.description"
 msgid "Show image for the given date"
-msgstr ""
+msgstr "Mostrar imagem para a data fornecida"
 
 #: src/app.rs:594
 msgctxt "command-line.option.arg.description"
@@ -509,12 +525,12 @@ msgstr "YYYY-MM-DD"
 #: src/app.rs:799
 msgctxt "portal.request-background.reason"
 msgid "Automatically fetch and set wallpaper in background"
-msgstr ""
+msgstr "Buscar e definir automaticamente o papel de parede em segundo plano"
 
 #: src/app/model/error_notification.rs:41
 msgctxt "error-notification.title"
 msgid "Picture Of The Day needs an API key"
-msgstr ""
+msgstr "A Imagem do Dia precisa de uma chave de API"
 
 #: src/app/model/error_notification.rs:46
 msgctxt "error-notification.description"
@@ -522,11 +538,13 @@ msgid ""
 "Please configure a valid API key for %1 in the application preferences. The "
 "current key appears to be invalid."
 msgstr ""
+"Configure uma chave de API válida para %1 nas preferências do aplicativo. A "
+"chave atual parece ser inválida."
 
 #: src/app/model/error_notification.rs:60
 msgctxt "error-notification.title"
 msgid "Picture Of The Day was rate-limited"
-msgstr ""
+msgstr "O Imagem do Dia teve sua taxa limitada"
 
 #: src/app/model/error_notification.rs:65
 msgctxt "error-notification.description"
@@ -534,6 +552,8 @@ msgid ""
 "The %1 server is rate-limited and does currently not allow you to fetch an "
 "image. Try again later, or try a different source."
 msgstr ""
+"O servidor %1 tem limitação de taxa e atualmente não permite que você busque "
+"uma imagem. Tente novamente mais tarde ou tente uma fonte diferente."
 
 #: src/app/model/error_notification.rs:74
 #: src/app/model/error_notification.rs:87
@@ -547,6 +567,8 @@ msgid ""
 "Currently, %1 does not provide an image for today. Try again later, or try a "
 "different source."
 msgstr ""
+"Atualmente, %1 não fornece uma imagem para hoje. Tente novamente mais tarde "
+"ou tente uma fonte diferente."
 
 #: src/app/model/error_notification.rs:91
 msgctxt "error-notification.description"
@@ -554,6 +576,8 @@ msgid ""
 "Today, %1 provides a video or another type of media which this application "
 "does not support. Try again tomorrow, or try a different source."
 msgstr ""
+"Hoje, %1 fornece um vídeo ou outro tipo de mídia que este aplicativo não "
+"suporta. Tente novamente amanhã ou tente uma fonte diferente."
 
 #: src/app/model/error_notification.rs:103
 #: src/app/model/error_notification.rs:121
@@ -569,6 +593,9 @@ msgid ""
 "currently. Try again later, or try a different source. If the issue persists "
 "please report the problem."
 msgstr ""
+"O servidor %s respondeu com status HTTP %2. O servidor pode estar com "
+"problemas no momento. Tente novamente mais tarde ou tente uma fonte "
+"diferente. Se o problema persistir, informe-o."
 
 #: src/app/model/error_notification.rs:125
 msgctxt "error-notification.description"
@@ -577,11 +604,14 @@ msgid ""
 "currently. Try again later, or try a different source. If the issue persists "
 "please report the problem."
 msgstr ""
+"O servidor %1 respondeu com dados inválidos. O servidor pode estar com "
+"problemas no momento. Tente novamente mais tarde ou tente uma fonte "
+"diferente. Se o problema persistir, informe-o."
 
 #: src/app/model/error_notification.rs:140
 msgctxt "error-notification.title"
 msgid "Limited network connectivity"
-msgstr ""
+msgstr "Conectividade de rede limitada"
 
 #: src/app/model/error_notification.rs:145
 msgctxt "error-notification.description"
@@ -590,6 +620,9 @@ msgid ""
 "following message: %2. Your system appears to have only limited network "
 "connectivity. Try to connect your system to the internet."
 msgstr ""
+"Ocorreu um erro de E/S ao buscar a imagem de hoje em %1, com a seguinte "
+"mensagem: %2. Seu sistema parece ter conectividade de rede limitada. Tente "
+"conectar seu sistema à internet."
 
 #: src/app/model/error_notification.rs:153
 msgctxt "error-notification.description"
@@ -598,6 +631,9 @@ msgid ""
 "following message: %2. Try again later, or try a different source. If the "
 "issue persists please report the problem."
 msgstr ""
+"Ocorreu um erro de E/S ao buscar a imagem de hoje em %1, com a seguinte "
+"mensagem: %2. Tente novamente mais tarde ou tente uma fonte diferente. Se o "
+"problema persistir, informe-o."
 
 #: src/app/widgets/application_window.rs:73
 msgctxt "error-notification.description"
@@ -605,11 +641,13 @@ msgid ""
 "An I/O error occurred while opening %1, with the following message: %2. If "
 "the issue persists please report the problem."
 msgstr ""
+"Ocorreu um erro de E/S ao abrir %1, com a seguinte mensagem: %2. Se o "
+"problema persistir, informe-o."
 
 #: src/app/widgets/application_window.rs:79
 msgctxt "error-notification.title"
 msgid "Failed to open source URL"
-msgstr ""
+msgstr "Falha ao abrir o URL do código-fonte"
 
 #: src/app/widgets/application_window.rs:98
 msgctxt "error-notification.description"
@@ -617,11 +655,13 @@ msgid ""
 "An I/O error occurred while setting the wallpaper, with the following "
 "message: %1. If the issue persists please report the problem."
 msgstr ""
+"Ocorreu um erro de E/S ao definir o papel de parede, com a seguinte mensagem:"
+" %1. Se o problema persistir, informe-o."
 
 #: src/app/widgets/application_window.rs:104
 msgctxt "error-notification.title"
 msgid "Failed to set wallpaper"
-msgstr ""
+msgstr "Falha ao definir o papel de parede"
 
 #: src/app/widgets/application_window.rs:131
 msgctxt "error-notification.description"
@@ -629,15 +669,17 @@ msgid ""
 "An I/O error occurred while opening the current image, with the following "
 "message: %1. If the issue persists please report the problem."
 msgstr ""
+"Ocorreu um erro de E/S ao abrir a imagem atual, com a seguinte mensagem: %1. "
+"Se o problema persistir, informe-o."
 
 #: src/app/widgets/application_window.rs:137
 msgctxt "error-notification.title"
 msgid "Failed to open image"
-msgstr ""
+msgstr "Falha ao abrir a imagem"
 
 #: src/app/widgets/application_window.rs:152
 msgid "Saved image %1"
-msgstr ""
+msgstr "Imagem salva %1"
 
 #: src/app/widgets/application_window.rs:170
 msgctxt "error-notification.description"
@@ -645,11 +687,13 @@ msgid ""
 "An I/O error occurred while saving the current image, with the following "
 "message: %1. If the issue persists please report the problem."
 msgstr ""
+"Ocorreu um erro de E/S ao salvar a imagem atual, com a seguinte mensagem: "
+"%1. Se o problema persistir, informe-o."
 
 #: src/app/widgets/application_window.rs:176
 msgctxt "error-notification.title"
 msgid "Failed to save image"
-msgstr ""
+msgstr "Falha ao salvar a imagem"
 
 #: src/app/widgets/application_window.rs:193
 msgctxt "alert.response"
@@ -690,7 +734,7 @@ msgstr[1] "%1/%2 coleções habilitadas"
 #: src/images/source.rs:58
 msgctxt "source name"
 msgid "NASA Astronomy Picture of the Day"
-msgstr ""
+msgstr "Foto Astronômica do Dia da NASA"
 
 #: src/images/source.rs:59
 msgctxt "source name"
@@ -700,7 +744,7 @@ msgstr "Bing"
 #: src/images/source.rs:60
 msgctxt "source name"
 msgid "Wikimedia Picture of the Day"
-msgstr ""
+msgstr "Imagem do Dia da Wikimedia"
 
 #: src/images/source.rs:61
 msgctxt "source name"
@@ -710,27 +754,27 @@ msgstr "Simon Stålenhag"
 #: src/images/source.rs:62
 msgctxt "source name"
 msgid "Earth Science Picture of the Day"
-msgstr ""
+msgstr "Imagem do Dia das Ciências da Terra"
 
 #: src/images/source.rs:66
 msgctxt "source name"
 msgid "NASA Earth Observatory Image of the Day"
-msgstr ""
+msgstr "Imagem do Dia do Observatório Terrestre da NASA"
 
 #: src/images/sources/bing.rs:77
 msgctxt "source.bing.copyright"
 msgid "All rights reserved."
-msgstr ""
+msgstr "Todos os direitos reservados."
 
 #: src/images/sources/eoiod.rs:36
 msgctxt "source.eoiod.copyright"
 msgid "NASA Earth Observatory"
-msgstr ""
+msgstr "Observatório da Terra da NASA"
 
 #: src/images/sources/stalenhag.rs:94
 msgctxt "source.stalenhag.copyright"
 msgid "All rights reserved."
-msgstr ""
+msgstr "Todos os direitos reservados."
 
 #: src/images/sources/stalenhag.rs:95
 #, c-format
@@ -742,20 +786,20 @@ msgstr "Coleção: %s"
 #, c-format
 msgctxt "source.wikimedia.copyright"
 msgid "%artist (%credit, %license)"
-msgstr ""
+msgstr "%artist (%credit, %license)"
 
 #: src/images/sources/wikimedia.rs:71
 #, c-format
 msgctxt "source.wikimedia.copyright"
 msgid "%artist (%license)"
-msgstr "%artista (%licença)"
+msgstr "%artist (%license)"
 
 #: src/images/sources/wikimedia.rs:80
 msgctxt "source.wikimedia.copyright"
 msgid "Unknown, all rights reserved"
-msgstr ""
+msgstr "Desconhecido, todos os direitos reservados"
 
 #: src/main.rs:87
 msgctxt "application-name"
 msgid "Picture Of The Day"
-msgstr ""
+msgstr "Imagem do Dia"
