--- a/po/et.po
+++ b/po/et.po
@@ -7,16 +7,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de.swsnr.pictureoftheday\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-06-09 19:58+0000\n"
+"PO-Revision-Date: 2025-07-24 19:09+0000\n"
 "Last-Translator: Priit Jõerüüt <jrtcdbrg@noreply.codeberg.org>\n"
-"Language-Team: Estonian <https://translate.codeberg.org/projects/de-swsnr-"
-"pictureoftheday/de-swsnr-pictureoftheday/et/>\n"
+"Language-Team: Estonian <https://translate.codeberg.org/projects/"
+"de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/et/>\n"
 "Language: et\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 5.11.4\n"
+"X-Generator: Weblate 5.12.2\n"
 
 #. Translators: Do feel free to translate the application name
 #: de.swsnr.pictureoftheday.desktop:3 de.swsnr.pictureoftheday.metainfo.xml:5
@@ -553,18 +553,13 @@ msgid "Picture Of The Day needs an API key"
 msgstr "Päevapilt vajab API võtit"
 
 #: src/app/model/error_notification.rs:48
-#, fuzzy
-#| msgctxt "error-notification.description"
-#| msgid ""
-#| "Please configure a valid API key for %1 in the application preferences. "
-#| "The current key appears to be invalid."
 msgctxt "error-notification.description"
 msgid ""
 "Please configure a valid API key for {source_name} in the application "
 "preferences. The current key appears to be invalid."
 msgstr ""
-"Palun lisa rakenduste eelistustes API võti „%1“ teenuse jaoks. Tundub, et "
-"praegune võti enam ei kehti."
+"Palun lisa rakenduste eelistustes API võti „{source_name}“ teenuse jaoks. "
+"Tundub, et praegune võti enam ei kehti."
 
 #: src/app/model/error_notification.rs:66
 msgctxt "error-notification.title"
@@ -572,18 +567,14 @@ msgid "Picture Of The Day was rate-limited"
 msgstr "Rakendusele Päevapilt rakendus päringute mahupiirang"
 
 #: src/app/model/error_notification.rs:72
-#, fuzzy
-#| msgctxt "error-notification.description"
-#| msgid ""
-#| "The %1 server is rate-limited and does currently not allow you to fetch "
-#| "an image. Try again later, or try a different source."
 msgctxt "error-notification.description"
 msgid ""
 "The {source_name} server is rate-limited and does currently not allow you to "
 "fetch an image. Try again later, or try a different source."
 msgstr ""
-"%1 server kasutab päringute arvu või mahu piirangut ja ei võimalda sul "
-"hetkel pilte alla laadida. Proovi hiljem uuesti või kasuta muud andmeallikat."
+"{source_name} server kasutab päringute arvu või mahu piirangut ja ei "
+"võimalda sul hetkel pilte alla laadida. Proovi hiljem uuesti või kasuta muud "
+"andmeallikat."
 
 #: src/app/model/error_notification.rs:85
 #: src/app/model/error_notification.rs:103
@@ -592,34 +583,23 @@ msgid "No image today"
 msgstr "Täna polegi pilti"
 
 #: src/app/model/error_notification.rs:90
-#, fuzzy
-#| msgctxt "error-notification.description"
-#| msgid ""
-#| "Currently, %1 does not provide an image for today. Try again later, or "
-#| "try a different source."
 msgctxt "error-notification.description"
 msgid ""
 "Currently, {source_name} does not provide an image for today. Try again "
 "later, or try a different source."
 msgstr ""
-"Hetkel %1 server ei võimalda pilte alla laadida. Proovi hiljem uuesti või "
-"kasuta muud andmeallikat."
+"Hetkel {source_name} server ei võimalda pilte alla laadida. Proovi hiljem "
+"uuesti või kasuta muud andmeallikat."
 
 #: src/app/model/error_notification.rs:108
-#, fuzzy
-#| msgctxt "error-notification.description"
-#| msgid ""
-#| "Today, %1 provides a video or another type of media which this "
-#| "application does not support. Try again tomorrow, or try a different "
-#| "source."
 msgctxt "error-notification.description"
 msgid ""
 "Today, {source_name} provides a video or another type of media which this "
 "application does not support. Try again tomorrow, or try a different source."
 msgstr ""
-"Täna võimaldab %1 server videote või muu sellise meedia allalaadimist, mida "
-"see rakendus veel ei toeta. Proovi hiljem uuesti või kasuta muud "
-"andmeallikat."
+"Täna võimaldab {source_name} server videote või muu sellise meedia "
+"allalaadimist, mida see rakendus veel ei toeta. Proovi hiljem uuesti või "
+"kasuta muud andmeallikat."
 
 #: src/app/model/error_notification.rs:125
 #: src/app/model/error_notification.rs:146
@@ -629,38 +609,27 @@ msgid "Fetching images failed"
 msgstr "Piltide allalaadimine ei õnnestunud"
 
 #: src/app/model/error_notification.rs:130
-#, fuzzy
-#| msgctxt "error-notification.description"
-#| msgid ""
-#| "The %s server replied with HTTP status %2. The server may have issues "
-#| "currently. Try again later, or try a different source. If the issue "
-#| "persists please report the problem."
 msgctxt "error-notification.description"
 msgid ""
 "The {source_name} server replied with HTTP status {http_status}. The server "
 "may have issues currently. Try again later, or try a different source. If "
 "the issue persists please report the problem."
 msgstr ""
-"%s serveri päringute vastuseks on http olekukood %2. Serveril võivad olla "
-"ajutised probleemid. Proovi hiljem uuesti või kasuta muud andmeallikat. Kui "
-"viga kestab pikemalt, siis palun anna sellest meile teada."
+"{source_name} serveri päringute vastuseks on http olekukood {http_status}. "
+"Serveril võivad olla ajutised probleemid. Proovi hiljem uuesti või kasuta "
+"muud andmeallikat. Kui viga kestab pikemalt, siis palun anna sellest meile "
+"teada."
 
 #: src/app/model/error_notification.rs:151
-#, fuzzy
-#| msgctxt "error-notification.description"
-#| msgid ""
-#| "The %1 server responded with invalid data. The server may have issues "
-#| "currently. Try again later, or try a different source. If the issue "
-#| "persists please report the problem."
 msgctxt "error-notification.description"
 msgid ""
 "The {source_name} server responded with invalid data. The server may have "
 "issues currently. Try again later, or try a different source. If the issue "
 "persists please report the problem."
 msgstr ""
-"%1 serveri päringuvastuses olid vigased andmed. Serveril võivad olla "
-"ajutised probleemid. Proovi hiljem uuesti või kasuta muud andmeallikat. Kui "
-"viga kestab pikemalt, siis palun anna sellest meile teada."
+"{source_name} serveri päringuvastuses olid vigased andmed. Serveril võivad "
+"olla ajutised probleemid. Proovi hiljem uuesti või kasuta muud andmeallikat. "
+"Kui viga kestab pikemalt, siis palun anna sellest meile teada."
 
 #: src/app/model/error_notification.rs:171
 msgctxt "error-notification.title"
@@ -668,39 +637,27 @@ msgid "Limited network connectivity"
 msgstr "Piiratud võrguühendus"
 
 #: src/app/model/error_notification.rs:177
-#, fuzzy
-#| msgctxt "error-notification.description"
-#| msgid ""
-#| "An I/O error occurred while fetching today's image from %1, with the "
-#| "following message: %2. Your system appears to have only limited network "
-#| "connectivity. Try to connect your system to the internet."
 msgctxt "error-notification.description"
 msgid ""
 "An I/O error occurred while fetching today's image from {source_name}, with "
 "the following message: {error}. Your system appears to have only limited "
 "network connectivity. Try to connect your system to the internet."
 msgstr ""
-"Tänase pildi laadimisel %1 serverist tekkis sisend/väljundviga järgneva "
-"veateatega: %2. Sinu arvuti või nutiseadme internetiühendus toimib "
-"piirangutega või üldse mitte. Kontrolli oma arvuti või seadme "
+"Tänase pildi laadimisel {source_name} serverist tekkis sisend/väljundviga "
+"järgneva veateatega: {error}. Sinu arvuti või nutiseadme internetiühendus "
+"toimib piirangutega või üldse mitte. Kontrolli oma arvuti või seadme "
 "internetiühenduse toimivust."
 
 #: src/app/model/error_notification.rs:193
-#, fuzzy
-#| msgctxt "error-notification.description"
-#| msgid ""
-#| "An I/O error occurred while fetching today's image from %1, with the "
-#| "following message: %2. Try again later, or try a different source. If the "
-#| "issue persists please report the problem."
 msgctxt "error-notification.description"
 msgid ""
 "An I/O error occurred while fetching today's image from {source_name}, with "
 "the following message: {error}. Try again later, or try a different source. "
 "If the issue persists please report the problem."
 msgstr ""
-"Tänase pildi laadimisel %1 serverist tekkis sisend/väljundviga järgneva "
-"veateatega: %2. Proovi hiljem uuesti või kasuta muud andmeallikat. Kui viga "
-"kestab pikemalt, siis palun anna sellest meile teada."
+"Tänase pildi laadimisel {source_name} serverist tekkis sisend/väljundviga "
+"järgneva veateatega: {error}. Proovi hiljem uuesti või kasuta muud "
+"andmeallikat. Kui viga kestab pikemalt, siis palun anna sellest meile teada."
 
 #: src/app/widgets/application_window.rs:74
 msgctxt "error-notification.title"
@@ -708,19 +665,14 @@ msgid "Failed to open source URL"
 msgstr "Andmeallika võrguaadressi avamine ei õnnestunud"
 
 #: src/app/widgets/application_window.rs:81
-#, fuzzy
-#| msgctxt "error-notification.description"
-#| msgid ""
-#| "An I/O error occurred while opening %1, with the following message: %2. "
-#| "If the issue persists please report the problem."
 msgctxt "error-notification.description"
 msgid ""
 "An I/O error occurred while opening {url}, with the following message: "
 "{error}. If the issue persists please report the problem."
 msgstr ""
-"Tänase pildi avamisel %1 serverist tekkis sisend/väljundviga järgneva "
-"veateatega: %2. Kui viga kestab pikemalt, siis palun anna sellest meile "
-"teada."
+"Tänase pildi avamisel {source_name} serverist tekkis sisend/väljundviga "
+"järgneva veateatega: {error}. Kui viga kestab pikemalt, siis palun anna "
+"sellest meile teada."
 
 #: src/app/widgets/application_window.rs:103
 msgctxt "error-notification.title"
@@ -728,18 +680,13 @@ msgid "Failed to set wallpaper"
 msgstr "Taustapildiks määramine ei toimi"
 
 #: src/app/widgets/application_window.rs:110
-#, fuzzy
-#| msgctxt "error-notification.description"
-#| msgid ""
-#| "An I/O error occurred while setting the wallpaper, with the following "
-#| "message: %1. If the issue persists please report the problem."
 msgctxt "error-notification.description"
 msgid ""
 "An I/O error occurred while setting the wallpaper, with the following "
 "message: {error}. If the issue persists please report the problem."
 msgstr ""
 "Tänase pildi määramisel taustapildiks tekkis sisend/väljundviga järgneva "
-"veateatega: %1. Kui viga kestab pikemalt, siis palun anna sellest meile "
+"veateatega: {error}. Kui viga kestab pikemalt, siis palun anna sellest meile "
 "teada."
 
 #: src/app/widgets/application_window.rs:143
@@ -748,24 +695,17 @@ msgid "Failed to open image"
 msgstr "Ei õnnestunud avada pilti"
 
 #: src/app/widgets/application_window.rs:150
-#, fuzzy
-#| msgctxt "error-notification.description"
-#| msgid ""
-#| "An I/O error occurred while opening the current image, with the following "
-#| "message: %1. If the issue persists please report the problem."
 msgctxt "error-notification.description"
 msgid ""
 "An I/O error occurred while opening the current image, with the following "
 "message: {error}. If the issue persists please report the problem."
 msgstr ""
-"Selle pildi avamisel tekkis sisend/väljundviga järgneva veateatega: %1. Kui "
-"viga kestab pikemalt, siis palun anna sellest meile teada."
+"Selle pildi avamisel tekkis sisend/väljundviga järgneva veateatega: {error}. "
+"Kui viga kestab pikemalt, siis palun anna sellest meile teada."
 
 #: src/app/widgets/application_window.rs:170
-#, fuzzy
-#| msgid "Saved image %1"
 msgid "Saved image {name}"
-msgstr "%1 pilt on salvestatud"
+msgstr "{name} pilt on salvestatud"
 
 #: src/app/widgets/application_window.rs:189
 msgctxt "error-notification.title"
@@ -773,18 +713,13 @@ msgid "Failed to save image"
 msgstr "Ei õnnestunud salvestada pilti"
 
 #: src/app/widgets/application_window.rs:196
-#, fuzzy
-#| msgctxt "error-notification.description"
-#| msgid ""
-#| "An I/O error occurred while saving the current image, with the following "
-#| "message: %1. If the issue persists please report the problem."
 msgctxt "error-notification.description"
 msgid ""
 "An I/O error occurred while saving the current image, with the following "
 "message: {error}. If the issue persists please report the problem."
 msgstr ""
-"Selle pildi salvestamisel tekkis sisend/väljundviga järgneva veateatega: %1. "
-"Kui viga kestab pikemalt, siis palun anna sellest meile teada."
+"Selle pildi salvestamisel tekkis sisend/väljundviga järgneva veateatega: "
+"{error}. Kui viga kestab pikemalt, siis palun anna sellest meile teada."
 
 #: src/app/widgets/application_window.rs:218
 msgctxt "alert.response"
@@ -817,27 +752,13 @@ msgid "Save image"
 msgstr "Salvesta pilt"
 
 #: src/app/widgets/preferences_dialog.rs:73
-#, fuzzy
-#| msgid "%1/%2 collection enabled"
-#| msgid_plural "%1/%2 collections enabled"
 msgid "{n}/{total} collection enabled"
 msgid_plural "{n}/{total} collections enabled"
-msgstr[0] "Kasutusel kogumik: %1/%2"
-msgstr[1] "Kasutusel kogumikud: %1/%2"
+msgstr[0] "Kasutusel kogumik: {n}/{total}"
+msgstr[1] "Kasutusel kogumikud: {n}/{total}"
 
 #. Translators: This is Pango markup, be sure to escape appropriately
 #: src/config.rs:71
-#, fuzzy
-#| msgctxt "about-dialog.license-text"
-#| msgid ""
-#| "Copyright Sebastian Wiesner &lt;sebastian@swsnr.de&gt;\n"
-#| "\n"
-#| "Licensed under the terms of the EUPL 1.2. You can find official "
-#| "translations of the license text at <a href=\"%1\">%1</a>.\n"
-#| "\n"
-#| "The full English text follows.\n"
-#| "\n"
-#| "%2"
 msgctxt "about-dialog.license-text"
 msgid ""
 "Copyright {copyright_name} &lt;{copyright_mail}&gt;\n"
@@ -849,15 +770,15 @@ msgid ""
 "\n"
 "{license_text}"
 msgstr ""
-"Autoriõigused Sebastian Wiesner &lt;sebastian@swsnr.de&gt;\n"
+"Autoriõigused {copyright_name} &lt;{copyright_mail}&gt;\n"
 "\n"
 "Litsentseeritud Euroopa Liidu tarkvara vaba kasutuse litsentsi („EUPL“) "
-"versiooni 1.2 alusel, mille ametliku tõlke leiad siit: <a href=\"%1\">%1</"
-"a>.\n"
+"versiooni 1.2 alusel, mille ametliku tõlke leiad siit: <a href="
+"\"{translations}\">{translations}</a>.\n"
 "\n"
 "Järgnev on litsentsi ingliskeelne täistekst.\n"
 "\n"
-"%2"
+"{license_text}"
 
 #: src/images/source.rs:58
 msgctxt "source name"
@@ -906,28 +827,19 @@ msgid "All rights reserved."
 msgstr "Kõik õigused kaitstud."
 
 #: src/images/sources/stalenhag.rs:98
-#, fuzzy
-#| msgctxt "source.stalenhag.description"
-#| msgid "Collection: %s"
 msgctxt "source.stalenhag.description"
 msgid "Collection: {}"
-msgstr "Kogumik: %s"
+msgstr "Kogumik: {}"
 
 #: src/images/sources/wikimedia.rs:67
-#, fuzzy
-#| msgctxt "source.wikimedia.copyright"
-#| msgid "%artist (%credit, %license)"
 msgctxt "source.wikimedia.copyright"
 msgid "{artist} ({credit}, {license})"
-msgstr "%artist (%credit, %license)"
+msgstr "{artist} ({credit}, {license})"
 
 #: src/images/sources/wikimedia.rs:75
-#, fuzzy
-#| msgctxt "source.wikimedia.copyright"
-#| msgid "%artist (%license)"
 msgctxt "source.wikimedia.copyright"
 msgid "{artist} ({license})"
-msgstr "%artist (%license)"
+msgstr "{artist} ({license})"
 
 #: src/images/sources/wikimedia.rs:85
 msgctxt "source.wikimedia.copyright"
